tdf#152722 Number Format: keep NatNum modifiers

When modifying number format with UI (decimal places, negative in red...) NatNum modifiers must be preserved
Implement an helper to get NatNum string
As NatNum12 already inserts currency unit, do not treat it

Change-Id: I38be1da08a44d75ef663eaf50fccb3820ff9ed5e
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/144963
Tested-by: Jenkins
Reviewed-by: Eike Rathke <erack@redhat.com>