include/svl/zformat.hxx
@@ -459,6 +459,9 @@ public:
     void GetNatNumXml(
             css::i18n::NativeNumberXmlAttributes2& rAttr,
             sal_uInt16 nNumFor ) const;
+    /** Return empty string if no NatNum modifier or unvalid nNumFor
+        otherwhise return "[NatNum1]" or "[NatNum12 ...]" */
+    OUString GetNatNumModifierString( sal_uInt16 nNumFor = 0 ) const;
 
     /** Switches to the first non-"gregorian" calendar, but only if the current
         calendar is "gregorian"; original calendar name and date/time returned,
